--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,10 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
 
