--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=task-manager
+spring.application.name=sawbackend
 
 # CONFIG DATABASE
 spring.data.mongodb.uri=mongodb://localhost:27017/sawbackend
